--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
 
 <head>
-  <title>My Calculator</title>
-  
+  <title>First Calculator</title>
   <link rel="stylesheet" href="styles.css">
-  
 </head>
 
 <body>
@@ -35,6 +33,7 @@
     <input type="button" class="btn other" id="cal" value="=">
   </form>
   <p align="center" id="time"></p>
+  
   <script src="cal.js"></script>
 </body>
 
