--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </form>
   <p align="center" id="time"></p>
   
-  <script src="cal.js"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
